objects/Base_URL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invisimount_PORTAL_PROD_URL__c</fullName>
        <description>PORTAL_PROD_URL - Invisimount URL to the Production Instance</description>
        <label>Invisimount PORTAL_PROD_URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invisimount_PORTAL_QA_URL__c</fullName>
        <description>PORTAL_QA_URL  - Invisimount URL to the Test Instance</description>
        <label>Invisimount PORTAL_QA_URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Base URL</label>
</CustomObject>